drone/drone-server.yaml
kind: Service
apiVersion: v1
metadata:
  name: drone-server
spec:
  selector:
    app: drone-server
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-server
  labels:
    app: drone-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-server
  template:
    metadata:
      name: drone-server
      labels:
        app: drone-server
    spec:
      containers:
        - name: drone-server
          image: drone/drone:1.8.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              hostPort: 80
            - containerPort: 443
              hostPort: 443
          volumeMounts:
            - name: drone-server-persistent-storage
              mountPath: /data
      volumes:
        - name: drone-server-persistent-storage
          persistentVolumeClaim:
            claimName: drone-server-pv-claim
      restartPolicy: Always
