drone/ingress-drone.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone-server
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: buypass
spec:
  tls:
    - hosts:
        - drone.minsky.cc
      secretName: drone.minsky.cc-cert
  rules:
    - host: drone.minsky.cc
      http:
        paths:
          - path: /
            backend:
              serviceName: drone-server
              servicePort: 80
